Release history for Acme-Time-Constant

{{$NEXT}}

0.001003 2014-08-30T07:49:40Z
 [00 Trivial]
 - Improve test coverage.
 - Pull timespace and subspace closer together.

0.001002 2014-08-30T00:35:43Z
 [00 Trivial]
 - no code changes
 - metadata

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)

 [Metadata]
 - Fixup author

0.001001 2014-08-15T21:11:15Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace adjustment.

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Whitespace moved down by improving pre-build source.

0.001000 2014-08-04T04:27:24Z
 - First version.
