@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.016007 at Mon Aug  4 15:27:02 2014
+; vim: syntax=dosini
 name             = Acme-Time-Constant
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
@@ -8,7 +9,7 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 ; [Bootstrap::lib]
 
 [@Author::KENTNL]
-:version          = 2.020
+:version          = 2.024
 normal_form       = numify
 mantissa          = 6
 toolkit           = eumm
@@ -16,7 +17,7 @@ toolkit_hardness  = soft
 bumpversions      = 1
 copyfiles         = LICENSE
 srcreadme         = mkdn
-twitter_hash_tags = #perl #cpan
+; twitter_extra_hash_tags = #
 ; auto_prereqs_skip = File::Find
 
 [Prereqs]
