@@ -1,10 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001004
+ [Added / configure requires]
+ - perl 5.008
+
+ [Added / test requires]
+ - perl 5.008
 
 0.001003 2014-08-30T07:49:40Z
 
 0.001002 2014-08-30T00:35:43Z
 
 0.001001 2014-08-15T21:11:15Z
-
