@@ -1,10 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001004
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001003 → 0.99
 
 0.001003 2014-08-30T07:49:40Z
 
 0.001002 2014-08-30T00:35:43Z
 
 0.001001 2014-08-15T21:11:15Z
-
