@@ -1,6 +1,11 @@
 Release history for Acme-Time-Constant
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001003, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +9 ↑3 -3 (recommends: +1, suggests: ↑2)
+ - test: +1 (recommends: ↑1 ↓1)
 
 0.001003 2014-08-30T07:49:40Z
  [00 Trivial]
@@ -34,4 +39,3 @@ Release history for Acme-Time-Constant
 
 0.001000 2014-08-04T04:27:24Z
  - First version.
-
